# ai-learning-journey

./: .gitignore  CHANGELOG.md  GEMINI.md  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
.cursor/rules/: content-workflow.mdc  environment-and-changelog.mdc  formatting-and-math.mdc  project-rules.mdc
03-nlp/03.1-sentiment-analysis-with-logitic-regression/: notes.html  notes.md  test.html
03-nlp/03.1-sentiment-analysis-with-logitic-regression/notebooks/: C1_W1_Assignment.ipynb  C1_W1_lecture_nb_01_preprocessing.ipynb  C1_W1_lecture_nb_02_word_frequencies.ipynb  C1_W1_lecture_nb_03_logistic_regression_model.ipynb
03-nlp/03.2-sentiment-analysis-with-naive-bayes/: notes.html  notes.md
04-deep-learning/151.1-dense-neural-network/: notes.html  notes.md
05-data/clinical-data-models/: notes.html  notes.md
styles/: main.css
