[project]
name = "ai-learning-journey"
version = "0.1.0"
description = "AI Learning Journey"
requires-python = ">=3.11"

dependencies = [
    # Core data science and ML
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "matplotlib>=3.10.5",
    "seaborn>=0.13.2",
    # NLP specific
    "nltk>=3.9.1",
    "regex>=2025.7.34",
    # Jupyter ecosystem
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.6",
    "ipykernel>=6.30.1",
    "ipython>=9.4.0",
    "notebook>=7.4.5",
    "nbconvert>=7.16.6",
    "nbformat>=5.10.4",
    "ipywidgets>=8.1.7",
    # Utilities
    "tqdm>=4.67.1",
    "requests>=2.32.5",
    "beautifulsoup4>=4.13.4",
    "Pillow>=11.3.0",
    "PyYAML>=6.0.2",
    "python-dateutil>=2.9.0",
    "pytz>=2025.2",
    "tzdata>=2025.2",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
prefer-system = true

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
